[gd_scene load_steps=5 format=3 uid="uid://didv5a1wwq7ns"]

[ext_resource type="Script" path="res://scipt/SeedsDispenser.gd" id="1_d2tmo"]
[ext_resource type="PackedScene" uid="uid://q42skabv7qyw" path="res://models/Seed_Machine.glb" id="2_7r0w4"]

[sub_resource type="SphereShape3D" id="SphereShape3D_mdp1v"]

[sub_resource type="SphereShape3D" id="SphereShape3D_g75ce"]

[node name="SeedsDispenser" type="Node3D" node_paths=PackedStringArray("labelNode", "seedSpawn") groups=["seed_dispenser"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("1_d2tmo")
labelNode = NodePath("Label3D")
seedSpawn = NodePath("SeedSpawn")

[node name="Seed_Machine" parent="." instance=ExtResource("2_7r0w4")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
shape = SubResource("SphereShape3D_mdp1v")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_g75ce")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.68428, 0.729219, 0, -0.729219, 0.68428, 0.0731804, 2.15293, 1.24433)
visible = false
pixel_size = 0.01
text = "press F  to drop seeds
press E to pick them"
font_size = 12

[node name="SeedSpawn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.32999, 0.612072, 0)

[connection signal="body_entered" from="Area3D" to="." method="showInteractionButton"]
[connection signal="body_exited" from="Area3D" to="." method="hideInteractionButton"]
